// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isSelected: false, isDisabled: false, bgColor: background-default and theme: dark 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #262b2e;
  color: #fff;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #fff;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #4a4e51;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #b0b1b2;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for isSelected: false, isDisabled: false, bgColor: background-default and theme: light 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #f2f2f2;
  color: #000;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #000;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #e3e4e5;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #626669;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for isSelected: false, isDisabled: false, bgColor: background-surface and theme: dark 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #0e1418;
  color: #fff;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #fff;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #4a4e51;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #b0b1b2;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for isSelected: false, isDisabled: false, bgColor: background-surface and theme: light 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #fff;
  color: #000;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  outline: 1px solid transparent;
  outline-offset: 2px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #000;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
button:hover {
  background: #e3e4e5;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #626669;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for isSelected: false, isDisabled: true, bgColor: background-default and theme: light 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #f2f2f2;
  color: #96989a;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: not-allowed;
  outline: 0;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #96989a;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for isSelected: true, isDisabled: false, bgColor: background-default and theme: light 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #323639;
  color: #fff;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  outline: 1px solid transparent;
  outline-offset: 2px;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline-color: #fff;
}
button:focus:not(:focus-visible) {
  outline-color: transparent;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #b0b1b2;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for isSelected: true, isDisabled: true, bgColor: background-default and theme: light 1`] = `
":host {
  display: block !important;
  outline: 0 !important;
}
button {
  display: block;
  height: 100%;
  width: 100%;
  padding: 0.6875rem 2.5rem;
  margin: 0;
  border: 0;
  background: #323639;
  color: #96989a;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: not-allowed;
  outline: 0;
}
span {
  display: block;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #96989a;
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-right: 0.25rem;
}"
`;
